# Logicker

./: .gitignore  CMakeLists.txt  Docs.md  Doxyfile  PuzzlesMS2018.ods  README.md  build.sh  notes_v2.txt  scripting.txt
ChaiScript_pokusy/: build.sh  main.cpp  script.chai  sudoku.chai
puzzles_ms2018/: 01.01-Shakashaka.cpp  01.02-Heyawake.cpp  01.03-Hitori.cpp  01.04-LITS.cpp  01.05-Tapa.cpp  01.06-Nurikabe.cpp  01.07-Cave.cpp  01.08-Aquarium.cpp  01.09-All_or_nothing.cpp  01.10-Coral.cpp  01.11-Kuromasu.cpp  02.01-Scrabble.cpp  02.02-Hashi.cpp  02.03-Four_winds.cpp  02.05-Tents.cpp  02.06-Overlapping_squares.cpp  02.08-Magnets.cpp  02.09-As_Easy_As_ABC.cpp  02.10-Akari.cpp  02.11-Clouds.cpp  02.12-Lighthouses.cpp  02.13-Suguru.cpp  02.14-Suguru_diagonal.cpp  02.15-Gaps.cpp  02.16-Arrows.cpp  03.01-Skyscrapers_with_mirrors.cpp  03.06-Skyscrapers_with_GT_hints.cpp  03.07-Skyscrapers_with_Easy_As_ABC.cpp  03.08-Skyscrapers_myopia.cpp  03.09-Skyscrapers_with_parks.cpp  03.10-Skyscrapers_with_glass_towers.cpp  03.11-Stroll_among_skyscrapers.cpp  03.12-Skyscrapers_first_invisible.cpp  03.13-Skyscrapers_with_sum_baskets.cpp  03.14-Sky_snail.cpp  03.15-Sky_coral.cpp  03.16-Sky_battleships.cpp  05.01-ABC_untouchable.cpp  05.02-ABC_no_first.cpp  05.04-Coral_with_vertex_hints.cpp  (+114 more)
src/: checker.h  contents_view.h  definitions.h  exists.h  heyawake.h  input.h  puzzle.h  types_tree.h  undef.h
src/Puzzle/: constraintsSet.h  slotTree.h
src/Slot/: slot.h  slotPartImplT.h  slotPartName.h  slotPartValueT.h
src/Topology/: grid.h
src/Transformation/: AllOf.h  Assert.h  Contents.h  FilterIn.h  Narrow.h  NarrowBottom.h  NarrowTop.h  Pairs.h
src/Util/: finder.h  types_tree.h  types_tree_impl.h
test/: checker.cpp  data_input_for_tests.h  heyawake_checker.cpp  heyawake_for_tests.h  topology_for_tests.h  transformation_for_tests.h  types_tree.cpp
test/Transformation/: AllOf.cpp  Assert.cpp  Narrow.cpp  NarrowBottom.cpp  NarrowTop.cpp  Pairs.cpp
test/Util/: types_tree.cpp  types_tree_impl.cpp
test/puzzle_h/: 01_TheSimplestOfAllPuzzles.cpp  02_PuzzleWithRectangleGridAndNoSlots.cpp  03_HeyawakeGrid.cpp  04_HeyawakeGridWithTestDataInput.cpp  05_SimpleTransformation.cpp  06_Contents.cpp  07_Heyawake_BlacksNoTouchConstraint.cpp  07_Pairs.cpp  08_Filter.cpp  09_SimplePuzzleWithAConstraint.cpp  10_Heyawake_Checker_CheckSanity.cpp  11_Heyawake_BlacksNoTouchConstraint.cpp  (+2 more)
(+5 files in other folders)
