cmake_minimum_required(VERSION 3.13)
project(Logicker)

#set(CMAKE_CXX_COMPILER clang++-10)
set(CMAKE_CXX_COMPILER g++-10)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
add_compile_options(-fconcepts-diagnostics-depth=5)

add_executable(test)
target_include_directories(test PRIVATE src)
target_link_libraries(test PRIVATE gtest)
target_link_libraries(test PRIVATE gtest_main)
target_link_libraries(test PRIVATE gmock)
target_link_libraries(test PRIVATE gmock_main)
target_link_libraries(test PRIVATE pthread)
#target_link_libraries(test PRIVATE gecodesupport)
#target_link_libraries(test PRIVATE gecodekernel)
#target_link_libraries(test PRIVATE gecodesearch)
#target_link_libraries(test PRIVATE gecodeint)
#target_link_libraries(test PRIVATE gecodedriver)
#target_link_libraries(test PRIVATE gecodeminimodel)
#target_link_libraries(test PRIVATE gecodegist)

target_sources(test PRIVATE test/heyawake_checker.cpp)
target_sources(test PRIVATE test/puzzle_h/05_SimpleTransformation.cpp)
target_sources(test PRIVATE test/puzzle_h/01_TheSimplestOfAllPuzzles.cpp)
target_sources(test PRIVATE test/puzzle_h/02_PuzzleWithRectangleGridAndNoSlots.cpp)
target_sources(test PRIVATE test/puzzle_h/03_HeyawakeGrid.cpp)
target_sources(test PRIVATE test/puzzle_h/04_HeyawakeGridWithTestDataInput.cpp)
#target_sources(test PRIVATE src/heyawake.cpp)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)

#add_executable(Logicker_jemelik_2021_3kolo_3uloha_heyawake)
#target_link_libraries(Logicker_jemelik_2021_3kolo_3uloha_heyawake PRIVATE gecodesupport)
#target_link_libraries(Logicker_jemelik_2021_3kolo_3uloha_heyawake PRIVATE gecodekernel)
#target_link_libraries(Logicker_jemelik_2021_3kolo_3uloha_heyawake PRIVATE gecodesearch)
#target_link_libraries(Logicker_jemelik_2021_3kolo_3uloha_heyawake PRIVATE gecodeint)
#target_link_libraries(Logicker_jemelik_2021_3kolo_3uloha_heyawake PRIVATE gecodedriver) #target_link_libraries(Logicker_jemelik_2021_3kolo_3uloha_heyawake PRIVATE gecodeminimodel)
#target_link_libraries(Logicker_jemelik_2021_3kolo_3uloha_heyawake PRIVATE gecodegist)

#target_sources(Logicker_jemelik_2021_3kolo_3uloha_heyawake PRIVATE src/Logicker_jemelik_2021_3kolo_3uloha_heyawake.cpp)
